[BE] - feat: deploy local using kubernete

--- a/application-deployment-local.yml
+++ b/application-deployment-local.yml
@@ -2,29 +2,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-deployment
+  name: auth-deployment
   namespace: default
   labels:
-    app: order-deployment
+    app: auth-deployment
 spec:
   selector:
     matchLabels:
-      app: order-deployment
+      app: auth-deployment
   template:
     metadata:
       labels:
-        app: order-deployment
+        app: auth-deployment
     spec:
       containers:
-        - name: order-service
-          image: com.food.ordering.system/order.service:1.0-SNAPSHOT
+        - name: auth-service
+          image: com.backend.programming.learning.system/auth.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://postgres-service:5432/postgres?currentSchema=order&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+              value: "jdbc:postgresql://aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com:5432/auth-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+            - name: SPRING_DATASOURCE_USERNAME
+              value: "postgres"
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: "postgresadmin"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
+            - name: SOCKET-CONFIG-PORT
+              value: "8085"
+            - name: SOCKET-CONFIG-HOST
+              value: "192.168.1.11"
           resources:
             limits:
               cpu: "500m"
@@ -36,67 +44,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: order-service
+  name: auth-service
   namespace: default
   labels:
-    app: order-service
+    app: auth-service
 spec:
   selector:
-    app: order-deployment
+    app: auth-deployment
   ports:
-    - name: order-service-port
-      protocol: TCP
-      port: 8181
-  type: LoadBalancer
-  loadBalancerIP: ""
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: payment-deployment
-  namespace: default
-  labels:
-    app: payment-deployment
-spec:
-  selector:
-    matchLabels:
-      app: payment-deployment
-  template:
-    metadata:
-      labels:
-        app: payment-deployment
-    spec:
-      containers:
-        - name: payment-service
-          image: com.food.ordering.system/payment.service:1.0-SNAPSHOT
-          env:
-            - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://postgres-service:5432/postgres?currentSchema=payment&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
-            - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
-              value: "local-confluent-kafka-cp-kafka-headless:9092"
-            - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
-              value: "http://local-confluent-kafka-cp-schema-registry:8081"
-          resources:
-            limits:
-              cpu: "500m"
-              memory: "1024Mi"
-            requests:
-              cpu: "200m"
-              memory: "256Mi"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: payment-service
-  namespace: default
-  labels:
-    app: payment-service
-spec:
-  selector:
-    app: payment-deployment
-  ports:
-    - name: payment-service-port
+    - name: auth-service-port
       protocol: TCP
       port: 8182
   type: LoadBalancer
@@ -106,25 +62,29 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: restaurant-deployment
+  name: core-deployment
   namespace: default
   labels:
-    app: restaurant-deployment
+    app: core-deployment
 spec:
   selector:
     matchLabels:
-      app: restaurant-deployment
+      app: core-deployment
   template:
     metadata:
       labels:
-        app: restaurant-deployment
+        app: core-deployment
     spec:
       containers:
-        - name: restaurant-service
-          image: com.food.ordering.system/restaurant.service:1.0-SNAPSHOT
+        - name: core-service
+          image: com.backend.programming.learning.system/core.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://postgres-service:5432/postgres?currentSchema=restaurant&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+              value: "jdbc:postgresql://aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com:5432/core-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+            - name: SPRING_DATASOURCE_USERNAME
+              value: "postgres"
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: "postgresadmin"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
@@ -140,17 +100,17 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: restaurant-service
+  name: core-service
   namespace: default
   labels:
-    app: restaurant-service
+    app: core-service
 spec:
   selector:
-    app: restaurant-deployment
+    app: core-deployment
   ports:
-    - name: restaurant-service-port
+    - name: core-service-port
       protocol: TCP
-      port: 8183
+      port: 8181
   type: LoadBalancer
   loadBalancerIP: ""
 
@@ -158,24 +118,29 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: customer-deployment
+  name: course-deployment
+  namespace: default
   labels:
-    app: customer-deployment
+    app: course-deployment
 spec:
   selector:
     matchLabels:
-      app: customer-deployment
+      app: course-deployment
   template:
     metadata:
       labels:
-        app: customer-deployment
+        app: course-deployment
     spec:
       containers:
-        - name: customer-service
-          image: com.food.ordering.system/customer.service:1.0-SNAPSHOT
+        - name: course-service
+          image: com.backend.programming.learning.system/course.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://postgres-service:5432/postgres?currentSchema=customer&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+              value: "jdbc:postgresql://aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com:5432/course-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+            - name: SPRING_DATASOURCE_USERNAME
+              value: "postgres"
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: "postgresadmin"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
@@ -191,16 +156,71 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: customer-service
+  name: course-service
   namespace: default
   labels:
-    app: customer-service
+    app: course-service
 spec:
   selector:
-    app: customer-deployment
+    app: course-deployment
   ports:
-    - name: customer-service-port
+    - name: course-service-port
       protocol: TCP
       port: 8184
+  type: LoadBalancer
+  loadBalancerIP: ""
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: code-assessment-deployment
+  labels:
+    app: code-assessment-deployment
+spec:
+  selector:
+    matchLabels:
+      app: code-assessment-deployment
+  template:
+    metadata:
+      labels:
+        app: code-assessment-deployment
+    spec:
+      containers:
+        - name: code-assessment-service
+          image: com.backend.programming.learning.system/code-assessment.service:1.0-SNAPSHOT
+          env:
+            - name: SPRING_DATASOURCE_URL
+              value: "jdbc:postgresql://aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com:5432/code-assessment-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+            - name: SPRING_DATASOURCE_USERNAME
+              value: "postgres"
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: "postgresadmin"
+            - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
+              value: "local-confluent-kafka-cp-kafka-headless:9092"
+            - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
+              value: "http://local-confluent-kafka-cp-schema-registry:8081"
+          resources:
+            limits:
+              cpu: "500m"
+              memory: "1024Mi"
+            requests:
+              cpu: "200m"
+              memory: "256Mi"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: code-assessment-service
+  namespace: default
+  labels:
+    app: code-assessment-service
+spec:
+  selector:
+    app: code-assessment-deployment
+  ports:
+    - name: code-assessment-service-port
+      protocol: TCP
+      port: 8183
   type: LoadBalancer
   loadBalancerIP: ""
