--- a/local/course-deployment-local.yml
+++ b/local/course-deployment-local.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: course-service
-          image: com.backend.programming.learning.systemcom.backend.programming.learning.system/course.service:1.0-SNAPSHOT
+          image: com.backend.programming.learning.system/course.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
               value: "jdbc:postgresql://34.124.244.219:5432/course-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
