--- a/code-assessment-deployment.yml
+++ b/code-assessment-deployment.yml
@@ -55,24 +55,24 @@ spec:
   type: LoadBalancer
   loadBalancerIP: ""
 ---
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: code-assessment-deployment-hpa
-  namespace: default
-  labels:
-    app: code-assessment-deployment
-spec:
-  scaleTargetRef:
-    kind: Deployment
-    name: code-assessment-deployment
-    apiVersion: apps/v1
-  minReplicas: 2
-  maxReplicas: 4
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-            type: Utilization
-            averageUtilization: 85
+#apiVersion: autoscaling/v2
+#kind: HorizontalPodAutoscaler
+#metadata:
+#  name: code-assessment-deployment-hpa
+#  namespace: default
+#  labels:
+#    app: code-assessment-deployment
+#spec:
+#  scaleTargetRef:
+#    kind: Deployment
+#    name: code-assessment-deployment
+#    apiVersion: apps/v1
+#  minReplicas: 2
+#  maxReplicas: 4
+#  metrics:
+#    - type: Resource
+#      resource:
+#        name: cpu
+#        target:
+#            type: Utilization
+#            averageUtilization: 85
