--- a/core-deployment.yml
+++ b/core-deployment.yml
@@ -28,6 +28,8 @@ spec:
               value: "postgresadmin"
             - name: SPRING_DATASOURCE_INITIALIZATION-MODE
               value: "never"
+            - name: SOCKET-CONFIG_HOST
+              value: "62.171.185.208"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "gke-confluent-kafka-cp-kafka-headless:9092"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
@@ -57,24 +59,24 @@ spec:
   type: LoadBalancer
   loadBalancerIP: ""
 ---
-#apiVersion: autoscaling/v2
-#kind: HorizontalPodAutoscaler
-#metadata:
-#  name: core-deployment-hpa
-#  namespace: default
-#  labels:
-#    app: core-deployment
-#spec:
-#  scaleTargetRef:
-#    kind: Deployment
-#    name: core-deployment
-#    apiVersion: apps/v1
-#  minReplicas: 2
-#  maxReplicas: 4
-#  metrics:
-#    - type: Resource
-#      resource:
-#        name: cpu
-#        target:
-#          type: Utilization
-#          averageUtilization: 85
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: core-deployment-hpa
+  namespace: default
+  labels:
+    app: core-deployment
+spec:
+  scaleTargetRef:
+    kind: Deployment
+    name: core-deployment
+    apiVersion: apps/v1
+  minReplicas: 2
+  maxReplicas: 4
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 85
