--- a/code-assessment-deployment.yml
+++ b/code-assessment-deployment.yml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: code-assessment-service
-          image: com.backend.programming.learning.system/code.assessment.service:1.0-SNAPSHOT
+          image: asia-southeast1-docker.pkg.dev/programming-learning-system/backend-programming-learning-system-repository/code.assessment.service:1.0-SNAPSHOT
+#          image: com.backend.programming.learning.system/code.assessment.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
               value: "jdbc:postgresql://aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com:5432/code-assessment-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
