--- a/course-deployment.yml
+++ b/course-deployment.yml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
         - name: course-service
-          image: com.backend.programming.learning.system/course.service:1.0-SNAPSHOT
+          image: asia-southeast1-docker.pkg.dev/programming-learning-system/backend-programming-learning-system-repository/course.service:1.0-SNAPSHOT
+#          image: com.backend.programming.learning.system/course.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
               value: "jdbc:postgresql://aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com:5432/course-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
