[BE] - feat: change to AKS server

--- a/code-assessment-deployment.yml
+++ b/code-assessment-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: code-assessment-service
-          image: asia-southeast1-docker.pkg.dev/programming-learning-system/backend-programming-learning-system-repository/code.assessment.service:1.0-SNAPSHOT
+          image: backendprogramminglearningsystemrepository.azurecr.io/code.assessment.service:1.0-SNAPSHOT
 #          image: com.backend.programming.learning.system/code.assessment.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
