--- a/course-deployment.yml
+++ b/course-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: course-service
-          image: asia-southeast1-docker.pkg.dev/programming-learning-system/backend-programming-learning-system-repository/course.service:1.0-SNAPSHOT
+          image: backendprogramminglearningsystemrepository.azurecr.io/course.service:1.0-SNAPSHOT
 #          image: com.backend.programming.learning.system/course.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
