--- a/core-deployment.yml
+++ b/core-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: core-service
-          image: asia-southeast1-docker.pkg.dev/programming-learning-system/backend-programming-learning-system-repository/core.service:1.0-SNAPSHOT
+          image: backendprogramminglearningsystemrepository.azurecr.io/core.service:1.0-SNAPSHOT
 #          image: com.backend.programming.learning.system/core.service:1.0-SNAPSHOT
           env:
             - name: SPRING_DATASOURCE_URL
