--- a/core-deployment.yml
+++ b/core-deployment.yml
@@ -60,24 +60,24 @@ spec:
   type: LoadBalancer
   loadBalancerIP: ""
 ---
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: core-deployment-hpa
-  namespace: default
-  labels:
-    app: core-deployment
-spec:
-  scaleTargetRef:
-    kind: Deployment
-    name: core-deployment
-    apiVersion: apps/v1
-  minReplicas: 2
-  maxReplicas: 4
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 85
+#apiVersion: autoscaling/v2
+#kind: HorizontalPodAutoscaler
+#metadata:
+#  name: core-deployment-hpa
+#  namespace: default
+#  labels:
+#    app: core-deployment
+#spec:
+#  scaleTargetRef:
+#    kind: Deployment
+#    name: core-deployment
+#    apiVersion: apps/v1
+#  minReplicas: 2
+#  maxReplicas: 4
+#  metrics:
+#    - type: Resource
+#      resource:
+#        name: cpu
+#        target:
+#          type: Utilization
+#          averageUtilization: 85
