[BE] - feat: refactor db local password and change socket service port to course service yml file

--- a/local/code-assessment-deployment-local.yml
+++ b/local/code-assessment-deployment-local.yml
@@ -23,7 +23,7 @@ spec:
             - name: SPRING_DATASOURCE_USERNAME
               value: "postgres"
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "admin"
+              value: "localdb"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
