--- a/course-deployment.yml
+++ b/course-deployment.yml
@@ -54,6 +54,9 @@ spec:
     - name: course-service-port
       protocol: TCP
       port: 8184
+    - name: socket-service-port
+      protocol: TCP
+      port: 8085
   type: LoadBalancer
   loadBalancerIP: ""
 ---
