--- a/local/application-deployment-local.yml
+++ b/local/application-deployment-local.yml
@@ -24,15 +24,13 @@ spec:
             - name: SPRING_DATASOURCE_USERNAME
               value: "postgres"
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "admin"
+              value: "localdb"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
-            - name: SOCKET-CONFIG-PORT
-              value: "8085"
-            - name: SOCKET-CONFIG-HOST
-              value: "192.168.1.11"
+            - name: EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE
+              value: "http://discovery-service-1:8761/eureka/,http://discovery-service-2:8762/eureka/"
           resources:
             limits:
               cpu: "500m"
